# KaryoScope-analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  deploy-docs.yml
agent_results/: allchr_allele_cooccurrence.tsv  allchr_allele_pairs.tsv  allchr_allele_summary.tsv
data/: chm13v2_feature_weights.tsv  samples.tsv
data/colors/KS_human_CHM13/: KS_human_CHM13.acro_binary.colors.txt  KS_human_CHM13.acrocentric.colors.txt  KS_human_CHM13.animation.colors.txt  KS_human_CHM13.chrom_acro.colors.txt  KS_human_CHM13.chromosome.colors.txt  KS_human_CHM13.featureIDs.txt  KS_human_CHM13.features.txt  KS_human_CHM13.fiberseq.colors.txt  KS_human_CHM13.fiberseq_5mC.colors.txt  KS_human_CHM13.fiberseq_FIRE.colors.txt  KS_human_CHM13.fiberseq_FIRE_LINKER.colors.txt  KS_human_CHM13.fiberseq_LINKER.colors.txt  KS_human_CHM13.fiberseq_m6A.colors.txt  KS_human_CHM13.gene.colors.txt  KS_human_CHM13.region.colors.txt  KS_human_CHM13.region_subtelomere_flat.colors.txt  KS_human_CHM13.repeat.colors.txt  KS_human_CHM13.subtelomere_acrocentric_2d.colors.txt  KS_human_CHM13.subtelomere_acrocentric_flat.colors.txt  KS_human_CHM13.subtelomeric.colors.txt  KS_human_CHM13.subtelomeric_region.telsat_merge.colors.txt  KS_human_CHM13.telomere_region.colors.txt  KS_human_CHM13.telomere_satellite.colors.txt
data/sequence_annotations/: HeLa.sequence_annotations.adaptive_thresholds.tsv  IMR90.sequence_annotations.adaptive_thresholds.tsv  U2OS.sequence_annotations.adaptive_thresholds.tsv
docs/: Cluster_Annotation.md  Cluster_Plot.md  Comprehensive_Technical_Guide.md  KaryoScope_Preprocessing.md  Plot_Reads.md  Quick_Start.md  Sequence_Annotation.md  comprehensive-guide.md  index.md
docs/audit/: DECISIONS.md  KNOWN_ISSUES.html  KNOWN_ISSUES.md  KaryoScope_cluster_analysis.md  KaryoScope_cluster_annotate.md  KaryoScope_cluster_diagnostics.md  KaryoScope_cluster_plot.md  KaryoScope_cluster_translocation_reads.md  KaryoScope_compare_clusterings.md  KaryoScope_draw_legend.md  KaryoScope_find_translocation_reads.md  KaryoScope_merge_beds.md  KaryoScope_plot_reads.md  KaryoScope_select_representatives.md  KaryoScope_sequence_annotate.md  KaryoScope_telogator_reads_viz.md  KaryoScope_visualize_translocation_reads.md  OPEN_QUESTIONS.html  OPEN_QUESTIONS.md  README.html  README.md  _feature_vocab.html  _feature_vocab.md  clustering_methods.html  clustering_methods.md  create_panning_animation.md  feature_matrix_metrics.html  feature_matrix_metrics.md  rearrangement_detection.md
logs/: session.md
scripts/: HPRC2_centromere_analysis.sh  KS_allchr_allele_heatmap.py  KS_allchr_annotate.py  KS_allchr_barplot.py  KS_allchr_dendrogram.py  KS_human_CHM13.chromosome_acrocentric.alpha.colors.txt  KS_human_CHM13.chromosome_acrocentric.colors.txt  KaryoScope_ITS_analysis.py  KaryoScope_annotate_sequences.py  KaryoScope_cluster_analysis.py  KaryoScope_cluster_annotate.py  KaryoScope_cluster_diagnostics.py  KaryoScope_cluster_plot.py  KaryoScope_cluster_translocation_reads.py  KaryoScope_compare_clusterings.py  KaryoScope_draw_legend.py  KaryoScope_enrichment_bubbles.py  KaryoScope_find_translocation_reads.py  KaryoScope_merge_beds.py  KaryoScope_plot_reads.py  KaryoScope_select_representatives.py  KaryoScope_sequence_annotate.py  KaryoScope_telogator_reads_viz.py  KaryoScope_visualize_translocation_reads.py  KaryoScope_volcano_plot.py  QCfilter_apply.R  _feature_vocab.py  compute_genome_weights.sh  concatenate_centromere_regions.R  create_panning_animation.py  run_cluster_pipeline.sh
src/karyoscope_analysis/: __init__.py  __main__.py  _version.py  cli.py
src/karyoscope_analysis/commands/: __init__.py  bin_annotations.py  (+15 more)
tests/: conftest.py  test_annotation_binning.py  test_annotation_resolution.py  test_build_feature_matrix.py  test_build_feature_matrix_e2e.py  test_build_feature_matrix_streaming.py  test_cli.py  test_cluster_annotate.py  test_cluster_command.py  test_cluster_plot.py  test_clustering_comparison.py  test_colocalization.py  test_detect_rearrangements_command.py  test_draw_legend.py  test_enrichment.py  test_enrichment_plot.py  test_feature_align.py  test_feature_assembly.py  test_feature_vocab.py  test_genome_weights.py  test_intervals.py  test_io_bed.py  test_layout_orientation.py  test_legend_order.py  test_overlay_annotations_e2e.py  test_overlay_command.py  test_overlay_presets.py  test_overlay_streaming.py  test_plot_reads.py  test_rearrangement.py  test_representatives.py  test_seq_features.py  test_window_densities_property.py
tests/data/: README.md  colors.tsv  hierarchy.tsv
(+33 files in other folders)
